--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	id="WebApp_ID" version="3.0">
 	<welcome-file-list>
-		<welcome-file></welcome-file>
+		<welcome-file>/webapp/index.jsp</welcome-file>
 	</welcome-file-list>
 	<!--指定spring配置文件的位置 -->
 	<context-param>
